--- a/auth-jwt/package.json
+++ b/auth-jwt/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.8"
+    "mongoose": "^6.1.8",
+    "nodemon": "^2.0.15"
   }
 }
